test/negative/parse_missing_end_enum.mut
# Negative: missing 'end' to close enum
enum Color
    RED, GREEN, BLUE
